--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-body{
-    background-color: rgba(140, 221, 133, 0.966);
-}
+
 h1{
     background-color: blanchedalmond;
 }
@@ -11,5 +9,5 @@ h2,h3{
     background-color: coral;
 }
 #video{
-    background-color: burlywood;
+    background-color: black;
 }
