--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -3,19 +3,46 @@ body{
 }
 div h3, div p{
     color: black;
-    background-color: gray;
+  background-color:gray ;
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
+    
 }
 .borde{
    border-color: aqua;
   border-style: solid;
 border-radius: 5px;
+margin: 1px 15px 20px 15px;
+padding: 15px 15px 20px 15px;
+text-align: center;
+font-size: 20px ;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .margen{
-    background-color: crimson;
+    background-color:darksalmon;
     margin: 15px 15px 20px 15px;
-    padding: 15px 15px 20px 15px;
+    padding: 10px 10px 15px 10px;
     border-radius: 5px;
     border-style: solid;
     border-color: paleturquoise;
     text-align: center;
+
+}
+.text{
+    background-color: darkgray;
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
+    border-radius: 5px;
+    border-color: black;
+    border-style: solid;
+    text-align: justify;
+
+}
+.title-1{
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
+}
+.title-2{
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
 }
