--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 
-h1{
-    background-color: blanchedalmond;
-}
-p{
-    background-color: blueviolet;
-}
+
+
 h2,h3{
     background-color: coral;
 }
 #video{
     background-color: black;
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
 }
