--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -46,3 +46,26 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 15px 15px 20px 15px;
     padding: 15px 15px 20px 15px;
 }
+.table-1{
+    margin: 15px 15px 20px 15px;
+    padding: 15px 15px 20px 15px;
+}
+table{
+    width: 100%;
+    border-collapse:collapse;
+    
+}
+th,td{
+    border:1px;
+    border-style: solid;
+    border-color: navy;
+    padding: 3px;
+}
+th{
+    background-color: darkseagreen;
+    color: black;
+}
+tr:hover{
+background-color: cornflowerblue;
+cursor: pointer;
+}
