--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ h2,h3{
 }
 #video{
     background-color: black;
-    margin: 15px 15px 20px 15px;
-    padding: 15px 15px 20px 15px;
+    width: 500px;
+    margin: 0 auto;
+    padding: 20px 15px 20px;
+    padding-right: 80px;
 }
