--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -1,8 +1,9 @@
 body{
-    background-color:moccasin;
+    background-color:ivory;
 }
 
 .borde{
+    background-color: palegoldenrod;
    border-color: aqua;
   border-style: solid;
 border-radius: 5px;
@@ -11,16 +12,17 @@ padding: 15px 15px 20px 15px;
 text-align: center;
 font-size: 20px ;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 .margen{
-    background-color:darksalmon;
+    background-color:blanchedalmond;
     margin: 15px 15px 20px 15px;
     padding: 10px 10px 15px 10px;
     border-radius: 5px;
     border-style: solid;
     border-color: paleturquoise;
     text-align: center;
-
+    color: black;
 }
 .text{
     background-color: darkgray;
@@ -36,11 +38,13 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 15px 15px 20px 15px;
     padding: 15px 15px 20px 15px;
     text-align: center;
+    color: white;
 }
 .title-2{
     margin: 15px 15px 20px 15px;
     padding: 15px 15px 20px 15px;
     text-align: center;
+    color: white;
 }
 .table-1{
     margin: 15px 15px 20px 15px;
@@ -90,7 +94,7 @@ cursor: pointer;
     margin: 15px 15px 20px 15px;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: ivory;
+    background-color:wheat;
     border-radius: 5px;
     border-style: solid;
     text-align: justify;
