--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -94,7 +94,7 @@ cursor: pointer;
     margin: 15px 15px 20px 15px;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color:wheat;
+    background-color:blanchedalmond;
     border-radius: 5px;
     border-style: solid;
     text-align: justify;
