--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -99,4 +99,46 @@ cursor: pointer;
     border-style: solid;
     text-align: justify;
     
+    
+}
+
+header{
+    background-color: black;
+    color: white;
+    margin-right: 15px;
+    margin-left: 15px;
+    clear: both;
+    content: '';
+    display: table;
+}
+.menu{
+width: 1300px;
+margin:0 auto;
+}
+nav{
+    float: right;
+
+}
+nav ul li{
+    list-style: none;
+    margin-right: 25px;
+    float:left;
+    padding: 12px 0;
+}
+nav ul li a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+nav ul li a:hover{
+    cursor: pointer;
+    background-color: turquoise;
+    transition: .2s;
+}
+.logo{
+    float: left;
+    width: 50px;
+    height: 50px;
+   padding: 12px 0;
+   padding-left: 10px;
 }
